--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
 				<configuration>
-				<cloudHubDeployment>
+				<CloudHubDeployment>
 				<username>Max356</username>
 				<environment>Sandbox</environment>
 				<workers>1</workers>
@@ -33,7 +33,7 @@
 				<applicationName>userManagement-service</applicationName>
 				<password>@@Gaga356@@</password>
 				<muleVersion>4.2.2</muleVersion>
-				</cloudHubDeployment>
+				</CloudHubDeployment>
 				</configuration>
 			</plugin>
 		</plugins>
