--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 				<extensions>true</extensions>
 				<configuration>
 				<CloudHubDeployment>
-				<username>Max356</username>
+				<username>max356</username>
 				<environment>Sandbox</environment>
 				<workers>1</workers>
 				<workerType>Micro</workerType>
