--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 				<applicationName>userManagement-service</applicationName>
 				<password>@@Gaga356@@</password>
 				<muleVersion>4.2.2</muleVersion>
-				<region>US East(Ohio)</region>
+				<region>us-east-1</region>
 				<uri>https://anypoint.mulesoft.com</uri>
 				</cloudHubDeployment>
 				</configuration>
