--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,15 @@
 				<extensions>true</extensions>
 				<configuration>
 					<cloudHubDeployment>
-						<uri>https://anypoint.mulesoft.com</uri> <muleVersion>4.2.2</muleVersion> 
-							<username>max356</username> <password>@@Gaga356@@</password> <applicationName>userManagement-service</applicationName> 
-							<environment>Sandbox</environment> <workers>1</workers> <workerType>Micro</workerType> 
+						<uri>https://anypoint.mulesoft.com</uri> 
+						<muleVersion>4.2.2</muleVersion> 
+							<username>max356</username> 
+							<password>@@Gaga356@@</password> 
+							<applicationName>userManagement-service</applicationName> 
+							<environment>Sandbox</environment> 
+							<workers>1</workers> 
+							<workerType>Micro</workerType> 
 							<region>us-east-2</region>
-						
 							<!-- <uri>https://anypoint.mulesoft.com</uri>
 							<muleVersion>${mule.version}</muleVersion>
 							Deploy User Parameter
