--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 							<!-- <uri>https://anypoint.mulesoft.com</uri>
 							<muleVersion>${mule.version}</muleVersion>
 							Deploy User Parameter
-							<username>${anypoint.username}</username>
+							<userName>${anypoint.username}</userName>
 							<password>${anypoint.password}</password>
 							Environment Parameter
 							<environment>${cloudhub.environment}</environment>
